--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,71 +59,35 @@ if(BUILD_TESTS)
 
     enable_testing()
 
-    macro(add_test_executable test_name test_source)
+    macro(add_basetest test_name test_source)
+        add_executable(${test_name} ${test_source})
+        target_include_directories(${test_name} PRIVATE)
+        target_link_libraries(${test_name} PRIVATE ChameLib GTest::GTest pthread)
+
+        add_test(NAME "${test_name}" COMMAND ${test_name})
+        set_tests_properties("${test_name}" PROPERTIES LABELS "basetest")
+    endmacro()
+
+    file(GLOB BASETEST_SOURCES "test/scheme_test/CH_test/*.cpp" "test/scheme_test/IBCH_test/*.cpp" "test/scheme_test/PBCH_test/*.cpp")
+    foreach(test_source ${BASETEST_SOURCES})
+        get_filename_component(test_name ${test_source} NAME_WE)
+        add_basetest(${test_name} ${test_source})
+    endforeach()
+
+    macro(add_benchmarktest test_name test_source)
         add_executable(${test_name} ${test_source})
         target_include_directories(${test_name} PRIVATE test/common)
         target_link_libraries(${test_name} PRIVATE ChameLib GTest::GTest pthread)
 
-        add_test(NAME "basetest_${test_name}" COMMAND ${test_name} "-r" "1")
-        set_tests_properties("basetest_${test_name}" PROPERTIES LABELS "basetest")
+        add_test(NAME "${test_name}" COMMAND ${test_name})
+        set_tests_properties("${test_name}" PROPERTIES LABELS "benchmarktest")
     endmacro()
 
-    add_test_executable(RSA_test test/AE_test/RSA_test.cpp)
-    # add_test_executable(PKE_CPA_AMV_2017_test test/AE_test/PKE_CPA_AMV_2017_test.cpp)
-    # add_test_executable(PKE_CCA_AMV_2017_test test/AE_test/PKE_CCA_AMV_2017_test.cpp)
-    add_test_executable(AES_test test/SE_test/AES_test.cpp)
-    add_test_executable(BLS_test test/signature_test/BLS_test.cpp)
-    add_test_executable(CP_ABE_test test/ABE_test/CP_ABE_test.cpp)
-    add_test_executable(MA_ABE_test test/ABE_test/MA_ABE_test.cpp)
-    add_test_executable(ABET_test test/ABE_test/ABET_test.cpp)
-    add_test_executable(RABE_XNM_test test/ABE_test/RABE_XNM_test.cpp)
-    add_test_executable(RABE_TMM_test test/ABE_test/RABE_TMM_test.cpp)
-
-    # add_test_executable(CH_AMV_2017_test test/scheme_test/CH_test/CH_AMV_2017_test.cpp)
-    add_test_executable(CH_CDK_2017_test test/scheme_test/CH_test/CH_CDK_2017_test.cpp)
-    add_test_executable(CH_ET_BC_CDK_2017_test test/scheme_test/CH_test/CH_ET_BC_CDK_2017_test.cpp)
-    add_test_executable(CH_ET_KOG_CDK_2017_test test/scheme_test/CH_test/CH_ET_KOG_CDK_2017_test.cpp)
-    add_test_executable(CH_FS_ECC_CCT_2024_test test/scheme_test/CH_test/CH_FS_ECC_CCT_2024_test.cpp)
-    add_test_executable(CH_KEF_CZK_2004_test test/scheme_test/CH_test/CH_KEF_CZK_2004_test.cpp)
-    add_test_executable(CH_KEF_DL_CZT_2011_test test/scheme_test/CH_test/CH_KEF_DL_CZT_2011_test.cpp)
-    add_test_executable(CH_KEF_DLP_LLA_2012_test test/scheme_test/CH_test/CH_KEF_DLP_LLA_2012_test.cpp)
-    add_test_executable(CH_KEF_MH_RSA_F_AM_2004_test test/scheme_test/CH_test/CH_KEF_MH_RSA_F_AM_2004_test.cpp)
-    add_test_executable(CH_KEF_MH_RSANN_F_AM_2004_test test/scheme_test/CH_test/CH_KEF_MH_RSANN_F_AM_2004_test.cpp)
-    add_test_executable(CH_KEF_MH_SDH_DL_AM_2004_test test/scheme_test/CH_test/CH_KEF_MH_SDH_DL_AM_2004_test.cpp)
-    add_test_executable(CH_KEF_NoMH_AM_2004_test test/scheme_test/CH_test/CH_KEF_NoMH_AM_2004_test.cpp)
-    add_test_executable(CHET_RSA_CDK_2017_test test/scheme_test/CH_test/CHET_RSA_CDK_2017_test.cpp)
-    add_test_executable(CR_CH_DSS_2020_test test/scheme_test/CH_test/CR_CH_DSS_2020_test.cpp)
-    add_test_executable(FCR_CH_PreQA_DKS_2020_test test/scheme_test/CH_test/FCR_CH_PreQA_DKS_2020_test.cpp)
-    add_test_executable(MCH_CDK_2017_test test/scheme_test/CH_test/MCH_CDK_2017_test.cpp)
-
-    add_test_executable(IB_CH_KEF_CZS_2014_test test/scheme_test/IBCH_test/IB_CH_KEF_CZS_2014_test.cpp)
-    add_test_executable(IB_CH_MD_LSX_2022_test test/scheme_test/IBCH_test/IB_CH_MD_LSX_2022_test.cpp)
-    add_test_executable(IB_CH_ZSS_S1_2003_test test/scheme_test/IBCH_test/IB_CH_ZSS_S1_2003_test.cpp)
-    add_test_executable(IB_CH_ZSS_S2_2003_test test/scheme_test/IBCH_test/IB_CH_ZSS_S2_2003_test.cpp)
-    add_test_executable(ID_B_CollRes_XSL_2021_test test/scheme_test/IBCH_test/ID_B_CollRes_XSL_2021_test.cpp)
-
-    add_test_executable(DPCH_MXN_2022_test test/scheme_test/PBCH_test/DPCH_MXN_2022_test.cpp)
-    add_test_executable(MAPCH_ZLW_2021_test test/scheme_test/PBCH_test/MAPCH_ZLW_2021_test.cpp)
-    add_test_executable(PCH_DSS_2019_test test/scheme_test/PBCH_test/PCH_DSS_2019_test.cpp)
-    add_test_executable(PCHBA_TLL_2020_test test/scheme_test/PBCH_test/PCHBA_TLL_2020_test.cpp)
-    add_test_executable(RPCH_TMM_2022_test test/scheme_test/PBCH_test/RPCH_TMM_2022_test.cpp)
-    add_test_executable(RPCH_XNM_2021_test test/scheme_test/PBCH_test/RPCH_XNM_2021_test.cpp)
-
-    # benchmark
-    add_test_executable(base_test test/scheme_test/benchmark/base_test.cpp)
-
-    add_test_executable(IB_CH_KEF_CZS_2014_benchmark test/scheme_test/benchmark/IBCH/IB_CH_KEF_CZS_2014_benchmark.cpp)
-    add_test_executable(IB_CH_MD_LSX_2022_benchmark test/scheme_test/benchmark/IBCH/IB_CH_MD_LSX_2022_benchmark.cpp)
-    add_test_executable(IB_CH_ZSS_S1_2003_benchmark test/scheme_test/benchmark/IBCH/IB_CH_ZSS_S1_2003_benchmark.cpp)
-    add_test_executable(IB_CH_ZSS_S2_2003_benchmark test/scheme_test/benchmark/IBCH/IB_CH_ZSS_S2_2003_benchmark.cpp)
-    add_test_executable(ID_B_CollRes_XSL_2021_benchmark test/scheme_test/benchmark/IBCH/ID_B_CollRes_XSL_2021_benchmark.cpp)
-
-    add_test_executable(DPCH_MXN_2022_benchmark test/scheme_test/benchmark/PBCH/DPCH_MXN_2022_benchmark.cpp)
-    add_test_executable(MAPCH_ZLW_2021_benchmark test/scheme_test/benchmark/PBCH/MAPCH_ZLW_2021_benchmark.cpp)
-    add_test_executable(PCH_DSS_2019_benchmark test/scheme_test/benchmark/PBCH/PCH_DSS_2019_benchmark.cpp)
-    add_test_executable(PCHBA_TLL_2020_benchmark test/scheme_test/benchmark/PBCH/PCHBA_TLL_2020_benchmark.cpp)
-    add_test_executable(RPCH_TMM_2022_benchmark test/scheme_test/benchmark/PBCH/RPCH_TMM_2022_benchmark.cpp)
-    add_test_executable(RPCH_XNM_2021_benchmark test/scheme_test/benchmark/PBCH/RPCH_XNM_2021_benchmark.cpp)
+    file(GLOB BENCHMARKTEST_SOURCES "test/scheme_test/benchmark/*/*.cpp")
+    foreach(test_source ${BENCHMARKTEST_SOURCES})
+        get_filename_component(test_name ${test_source} NAME_WE)
+        add_benchmarktest(${test_name} ${test_source})
+    endforeach()
 endif()
 
 install(TARGETS ChameLib ARCHIVE DESTINATION lib)
